--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
     "next": "14.2.3",
